# yelp-polyglot-ml-pipeline

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: report.md  report2.md  schema_design.md
ml/: predictive_modeling.py
queries/: cypher_answers.txt  mongodb_answers.txt  part2_cypher_answers.txt  part2_cypher_answersQ3.txt  part2_mongodb_answers.txt  part2_mongodb_answers_no_augmentation.txt  predictive_modelling_report.txt
src/analytics/: mongo_queries.py  neo4j_queries.py  part2_mongo_queries.py  part2_neo4j_gds.py  verify_db.py
src/database/: add_state_index.py  augment_db_part2.py  fix_elite_status.py  fix_mongo_friends.py  mongo_loader.py  neo4j_loader.py  reload_users.py
src/etl/: extract_head.py  process_data.py
