[project]
name = "yelp-polyglot-ml-pipeline"
version = "0.1.0"
description = "Polyglot DB and ML pipeline for Yelp Dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.10",
    "pymongo>=4.6.2",
    "neo4j>=5.18.0",
    "tqdm>=4.66.2",
    "loguru>=0.7.2",
    "pyarrow>=15.0.0",
    "pyyaml>=6.0.3",
]
